# InvertedHedgehog

./: .gitmodules  CMakelists.txt  GenerateProjectFiles.bat
IH_App/: CMakelists.txt
IH_App/src/: App.cpp  main.cpp
IH_App/src/Core/: SampleGame.cpp  SampleGame.h
IH_Engine/: CMakelists.txt
IH_Engine/IH_Vulkan/: CMakeLists.txt
IH_Engine/IH_Vulkan/src/: IH_Vulkan.cpp  IH_Vulkan.h  vk_engine.h  vk_types.h
IH_Engine/libs/IH_Vulkan/: CMakeLists.txt
IH_Engine/libs/IH_Vulkan/src/IH_Vulkan/: IH_VkDescriptors.cpp  IH_VkDescriptors.h  IH_VkImages.cpp  IH_VkInitializers.cpp  IH_VkInitializers.h  IH_VkLoader.cpp  IH_VkPipelines.cpp  IH_VkPipelines.h  IH_VkTypes.h  IH_Vulkan.cpp  IH_Vulkan.h  vk_engine.h  vk_types.h
IH_Engine/src/IH_Engine/: IH_Core.cpp  IH_Core.h  IH_Engine.cpp  IH_Engine.h
IH_Engine/src/IH_Engine/Core/: IH_AppData.h  IH_Application.cpp  IH_Application.h  IH_Core.cpp  IH_Core.h  IH_Engine.cpp  IH_Engine.h  IH_Macros.h  IH_Module.cpp  IH_Module.h
IH_Engine/src/IH_Engine/Core/Optics/: IH_Graphics.cpp  IH_Graphics.h  IH_Window.cpp  IH_Window.h
IH_Engine/src/IH_Engine/Optics/: IH_Camera.cpp  IH_Camera.h  IH_Graphics.h  IH_Optics.cpp  IH_Optics.h  IH_RendererInterface.h  IH_Window.cpp  IH_Window.h
IH_Engine/src/IH_Engine/Utils/: CMakelists.txt  IH_Logger.cpp  IH_Logger.h
